Some bug fixes with generating min time to transition

--- a/two_player_smg.props
+++ b/two_player_smg.props
@@ -1,2 +1,6 @@
-<<p1>>R{"time_diff1"}max=? [!"crash" U "goal1"]
+<<p1>>R{"time_diff1"}max=? [ ((!"crash") U ("goal1" & "goal0"))]
+
+<<p0>>R{"time_diff0"}max=? [ !"crash" U ("goal1"&"goal0") ]
+
+Pmax=? [ (!"crash") U ("goal1"&"goal0") ]
 
