--- a/two_player_smg.props
+++ b/two_player_smg.props
@@ -1,6 +1,1 @@
-<<p1>>R{"time_diff1"}max=? [ ((!"crash") U ("goal1" & "goal0"))]
-
-<<p0>>R{"time_diff0"}max=? [ !"crash" U ("goal1"&"goal0") ]
-
-Pmax=? [ (!"crash") U ("goal1"&"goal0") ]
-
+<<p0, scheduler>>R{"time_diff0"}max=? [ ((!"crash") U ("end")) ]
