--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-pathos==0.2.7
+pathos==0.2.8
 Shapely==1.7.1
-pygame==1.9.6
-scipy==1.4.1
-matplotlib==3.2.1
-numpy==1.18.2
+pygame==2.0.1
+scipy==1.7.1
+matplotlib==3.4.3
+numpy==1.21.2
+PyQt5==5.15.4
